src/styles/app.css
/* ... */
.bubble-left-tail {
  --_p: 0;
  border-bottom-left-radius: 0 0;
  place-self: start;
}
.bubble-right-tail {
  --_p: 100%;
  border-bottom-right-radius: 0 0;
  place-self: end;
}
.bubble-left {
  /* this fix small point remaining */
  --_p: 0;
  place-self: start;
  border-color: var(--adm-color-background); 
}
.bubble-right {
  --_p: 100%;
  place-self: end;
  border-color: var(--adm-color-background);
}


.scrollableDiv * {
 overflow-anchor: none;
}
.scrollableDivAuto * {
 overflow-anchor: auto;
}

#endOfMessages {
  overflow-anchor: auto;
  height: 1px;
}

.adm-image-uploader-cell {
  display: flex !important;
  justify-content: center;
  align-items: center;
}

.ai-spin {
  animation: ai-spin 1s infinite linear;
}
@keyframes ai-spin {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(359deg);
  }
}

/* Hide all elements */
body.barcode-scanner-active {
  visibility: hidden;
  background: transparent;
}

/* Show only the barcode scanner modal */
.scanner-active  {
  visibility: visible; 
}

body.barcode-scanner-active .adm-center-popup-wrap {
  height: 100dvh;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}
body.barcode-scanner-active .adm-center-popup-mask {
  background-color: transparent !important;
}
body.barcode-scanner-active .adm-center-popup-close {
    color: rgb(186, 186, 186);
    font-size: 1.1em;
    border: 1px white solid;
    border-radius: 8px;
    right: -24px;
}

.square {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
  border-radius: 16px;
  width: 200px;
  height: 200px;
  border: 2px dashed rgb(90, 90, 90);
  box-shadow: 0 0 0 4000px rgba(0, 0, 0, 0.4);
  visibility: visible !important;
}

.passcode-input {
  --dot-size: 23px;
  --cell-size: 25px;
  --cell-gap: 10px;
  --adm-color-text: var(--adm-color-primary);
  --border-radius: 50%;
}

#unlock-pass {
  text-align: center;
}

input {
  --tw-ring-shadow: 0 0 #000 !important;
}
textarea {
  --tw-ring-shadow: 0 0 #000 !important;
}

/* .adm-list-item-content-main:has(.adm-input) {
  padding-top: 0;
  padding-bottom: 0;
}
.adm-list-item:has(.adm-input) {
  padding-left: 0px !important; 
}
.adm-list-item-content:has(.adm-input) {
  padding-right: 0px !important; 
}
.adm-input-element {
  padding: 12px !important;
} */

.high-contrast .adm-input-element {
  padding: 12px !important;
  border-radius: 8px !important;
  background-color: var(--main-background-color) !important;
}

/* hide input number arrow up/down */
input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
  -webkit-appearance: none; 
  margin: 0; 
}

.message  p {
  user-select: none;
  -webkit-user-select: none;
}

/* hide account button on no touch devices */
@media (hover: hover) {
  
  .eye-icon {
    color: var(--adm-color-text-secondary);
  }
  .eye-icon:hover {
    color: var(--adm-color-primary);
  }
  .antd-mobile-icon.cursor-pointer:hover, .scanner:hover, .hoverable:hover {
    color: var(--adm-color-primary);
    cursor: pointer;
  }
  .message p {
    user-select: auto;
    -webkit-user-select: auto;
  }
  
}


.text-3xl {
  font-size: 1.875rem;
  line-height: 2.25rem;
}

.chat-list .adm-list-body{
  background-color: var(--main-background-color);
  border-bottom: none;
}

.adm-tab-bar-wrap {
  /* fix Badge count on Menu being cut  */
  overflow: unset !important; 
}

.chat-message{
  white-space: pre-wrap;
  word-break: break-word;
  background-color: var(--adm-color-primary);
}

.chat-message.from{
  background-color: var(--adm-color-border);
  /* background-color: #1e1e1e; */
}

.form-mnemonic > .adm-list-card{
  margin: 0px 0px 0px 0px;
}



.ios-password-container {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  max-width: 100%;
  overflow-x: auto;
}

.password-section {
  text-align: center;
  letter-spacing: 1px;
  font-family: monospace;
  width: 95px;
}


/* Adjust for different screen sizes */
@media (max-width: 375px) {
  .password-section {
    font-size: 14px;
  }
}

.adm-form .adm-form-footer {
  /* padding-bottom: calc(var(--safe-area-inset-bottom, 0px) + var(--android-inset-bottom, 0px)) !important; */
  margin-bottom: calc(var(--safe-area-inset-bottom, 0px) + var(--android-inset-bottom, 0px)) !important;
}

.chat-item .adm-list-item-content-main {
  /* for chat list message ellipsis */
  overflow: auto; 
}


.fade-button-enter {
  animation: fadeIn 0.3s ease-in-out forwards;
}

.fade-button-exit {
  animation: fadeOut 0.3s ease-in-out forwards;
}

@keyframes fadeIn {
  from { opacity: 0; transform: translateY(10px); }
  to { opacity: 1; transform: translateY(0); }
}

@keyframes fadeOut {
  from { opacity: 1; transform: translateY(0); }
  to { opacity: 0; transform: translateY(10px); }
}

